--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDataElementTest.html
@@ -50,6 +50,9 @@
    <script type="text/javascript" src="../SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/DataElementBehaviour.js"></script>
    <script type="text/javascript" src="../SmartDocument/DataElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditor.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DataElementEditor.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDataElement.js"></script>
@@ -59,7 +62,7 @@
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         test_construct_whenMaxOccuresIsGiven_constructsSiblingElements();
+         //test_construct_whenMaxOccuresIsGiven_constructsSiblingElements();
       });
 				
       JsHamcrest.Integration.JsUnit();
