--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/DocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/DocumentElementTest.html
@@ -70,7 +70,7 @@
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         test_consturct_whenElementIsEditable_instantiatesAndassociatesEditor();
+//         test_consturct_whenElementIsEditable_instantiatesAndassociatesEditor();
 //         test_construct_whenPluginIsSpecified_CallsPluginConstruct();
 //         test_construct_whenPluginResourceIsUnavailable_firesError();
 //         test_destroy_whenUnmarshalled_ResetsProperties();
