--- a/Implementation/WebTier/WebContent/JavaScript/Source/ToolBarWidget/ToolBarDividerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/ToolBarWidget/ToolBarDividerTest.html
@@ -47,6 +47,7 @@
    <script type="text/javascript" src="../FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/LinkedHashMap.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/StringTokenizer.js"></script>
+   <script type="text/javascript" src="../FundamentalTypes/UniqueId.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../Internationalization/Locale.js"></script>
