--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopPanelTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopPanelTest.html
@@ -36,6 +36,7 @@
    
    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../Singleton/Singleton.js"></script>
+   <script type="text/javascript" src="../WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script>
    
    <script type="text/javascript" src="../AbstractDocument/AbstractDocument.js"></script>
@@ -44,7 +45,6 @@
    <script type="text/javascript" src="../ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="../DocumentEditor/DocumentEditor.js"></script>
-   <script type="text/javascript" src="../DocumentEditor/DocumentEditorDialog.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/ArrayList.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/JavaCompatibility.js"></script>
@@ -70,9 +70,12 @@
    <script type="text/javascript" src="../ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditor.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DataElementBehaviour.js"></script>
    <script type="text/javascript" src="../SmartDocument/DataElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DataElementEditor.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentBody.js"></script>
@@ -87,17 +90,18 @@
    <script type="text/javascript" src="../Desktop/DesktopColumn.js"></script>
    <script type="text/javascript" src="../Desktop/DesktopPanel.js"></script>
    <script type="text/javascript" src="../Desktop/DesktopPanelHeader.js"></script>
+   <script type="text/javascript" src="../Desktop/DesktopWindow.js"></script>
    <script type="text/javascript" src="../Desktop/UnconfiguredDesktopElementException.js"></script>
    <script type="text/javascript" src="../TabWidget/DuplicatedTabException.js"></script>
    <script type="text/javascript" src="../TabWidget/Tab.js"></script>
    <script type="text/javascript" src="../TabWidget/TabSelectedMessage.js"></script>
    <script type="text/javascript" src="../TabWidget/TabWidget.js"></script>
+   <script type="text/javascript" src="../TextAreaEditor/MooEditableDialog.js"></script>
    <script type="text/javascript" src="../TextAreaEditor/TextAreaEditor.js"></script>
    <script type="text/javascript" src="../ToolBarWidget/ToolBarButton.js"></script>
    <script type="text/javascript" src="../ToolBarWidget/ToolBarButtonFactory.js"></script>
    <script type="text/javascript" src="../ToolBarWidget/ToolBarDivider.js"></script>
    <script type="text/javascript" src="../ToolBarWidget/ToolBarWidget.js"></script>
-   <script type="text/javascript" src="../WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../WebUIController/WebUIController.js"></script>
    <script type="text/javascript" src="../WebUILogger/WebUILogger.js"></script>
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessageBus.js"></script>
@@ -131,7 +135,7 @@
    var componentStateManager;
    var desktopContainerElement;
    var desktopDefinition;
-   var loadedDocument;
+   var loadedDocumentUri;
    var panelDefinition;
    var pageWrapperElement;
    var panel;
@@ -184,7 +188,7 @@
    }
 
    function onDocumentLoaded( documentUri ) {
-      loadedDocument = documentUri;
+      loadedDocumentUri = documentUri;
       testCaseChain.callChain();
    }
 
@@ -198,7 +202,7 @@
       column.destroy();
       webUIMessageBus.tearDown();
       desktopContainerElement = null;
-      loadedDocument = null;
+      loadedDocumentUri = null;
 
       inform( "afterEachTest" );
       testCaseIsRunning = false;
@@ -314,7 +318,7 @@
          }, 
          function(){
             //after panelConstructed event
-            assertThat( panel.getState(), equalTo( DesktopPanel.States.CONSTRUCTED ));
+            assertThat( panel.getState(), equalTo( DesktopElement.States.CONSTRUCTED ));
             testCaseChain.callChain();
          },
          afterEachTest
@@ -333,6 +337,7 @@
          },
          function(){
             //after panelConstructed event
+            testCaseChain.callChain();
          },
          afterEachTest 
       );
@@ -366,7 +371,7 @@
             constructPanel();
          },
          function(){
-            assertThat( loadedDocument, equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentContentUri" ) ) );
+            assertThat( loadedDocumentUri, equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentDefinitionUri" ) ) );
          },
          function(){
             var message = new MenuSelectedMessage({ activityType : AbstractDocument.Activity.LOAD_DOCUMENT, documentType : AbstractDocument.Types.HTML, documentURI : HTML_DOCUMENT_URI });
@@ -389,7 +394,7 @@
             constructPanel();
          },
          function(){
-            assertThat( loadedDocument, equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentContentUri" ) ) );
+            assertThat( loadedDocumentUri, equalTo( desktopDefinition.selectNodeText( PANEL_DEFINITION + "/document/documentDefinitionUri" ) ) );
          },
          function(){
             var message = new MenuSelectedMessage({ activiyType : AbstractDocument.Activity.LOAD_DOCUMENT, documentType : AbstractDocument.Types.SMART, documentURI : SMART_DOCUMENT_URI });
