--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopWindowTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopWindowTest.html
@@ -33,15 +33,17 @@
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
     
-   <script type="text/javascript" src="../Singleton/Singleton.js"></script>
-   <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
+   <script type="text/javascript" src="../Singleton/Singleton.js"></script>
+   <script type="text/javascript" src="../WebUIConfiguration/WebUIConfiguration.js"></script>
+   <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
 	
    <script type="text/javascript" src="../AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="../ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="../DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="../Desktop/ComplexContentBehaviour.js"></script>
    <script type="text/javascript" src="../Desktop/DesktopElement.js"></script>
    <script type="text/javascript" src="../Desktop/DesktopWindow.js"></script>
@@ -68,9 +70,12 @@
    <script type="text/javascript" src="../ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditor.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../SmartDocument/DataElementBehaviour.js"></script>
    <script type="text/javascript" src="../SmartDocument/DataElement.js"></script>
+   <script type="text/javascript" src="../SmartDocument/DataElementEditor.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentBody.js"></script>
@@ -80,13 +85,15 @@
    <script type="text/javascript" src="../SmartDocument/MissingBindVariableException.js"></script>
    <script type="text/javascript" src="../SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../SmartDocument/UnconfiguredDocumentElementException.js"></script>
-   <script type="text/javascript" src="../WebUIConfiguration/WebUIConfiguration.js"></script>
+   <script type="text/javascript" src="../TextAreaEditor/MooEditableDialog.js"></script>
+   <script type="text/javascript" src="../TextAreaEditor/TextAreaEditor.js"></script>
    <script type="text/javascript" src="../WebUIController/WebUIController.js"></script>
    <script type="text/javascript" src="../WebUILogger/WebUILogger.js"></script>
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessageBus.js"></script>
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
+         //test_construct_whenSpecified_loadsContentHtml();
          //test_construct_whenSpecified_loadsSmartDocument();
       });
 
