--- a/Implementation/WebTier/WebContent/JavaScript/Source/TabWidget/TabWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/TabWidget/TabWidgetTest.html
@@ -29,6 +29,7 @@
    <script type="text/javascript" src="../SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
    
+   <script type="text/javascript" src="../AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../BrowserWidget/UnconfiguredWidgetException.js"></script>
