--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -35,6 +35,7 @@
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlsax.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
   
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="JavaScript/Source/WebUIConfiguration/WebUIConfiguration.js"></script>
@@ -89,6 +90,7 @@
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/OptionsResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/RemoteResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/StringTokenizer.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/UndefinedXmlResourceException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/UniqueId.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/XmlResource.js"></script>
