--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopFooterTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopFooterTest.html
@@ -26,6 +26,7 @@
     
    <script type="text/javascript" src="../Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../WebUIMessageBus/WebUIMessage.js"></script> 
+   <script type="text/javascript" src="../FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
 	
    <script type="text/javascript" src="../FundamentalTypes/ArrayList.js"></script>
@@ -33,6 +34,7 @@
    <script type="text/javascript" src="../FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/LinkedHashMap.js"></script>
+   <script type="text/javascript" src="../FundamentalTypes/TimeOutException.js"></script>
    <script type="text/javascript" src="../FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="../Internationalization/Locale.js"></script>
    <script type="text/javascript" src="../Internationalization/LocaleUtil.js"></script>
