--- a/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/testRunner.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/testRunner.html
@@ -10,14 +10,17 @@
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/jsUnitCore.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestFunction.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestGroup.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestPage.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTraceMessage.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/jsTestManager.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/JsBaseUiManager.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/JsClassicUiManager.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/JsModernUiManager.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestFunction.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestGroup.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestPage.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestManager.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestRunner.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestClassRunner.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTestFunctionRunner.js"></script>
+   <script language="JavaScript" type="text/javascript" src="app/JsTraceMessage.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/JsTestFrameAnalyser.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/jsUnitParams.js"></script>
    <script language="JavaScript" type="text/javascript" src="app/jsUnitTracer.js"></script>
@@ -35,8 +38,8 @@
 
    function resetTestManager() {
       params = new JsUnit.Params( document.location.search );
-      testManager = new JsTestManager(params);
-      tracer = new JsUnitTracer(testManager, params);
+      testManager = new JsTestManager( params );
+      tracer = new JsUnitTracer( testManager, params);
       uiFrameUrl = testManager.getUiFrameUrl();
    }
 
