JsTestFunctionRunner and JsTestFunction is implemented.

--- a/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/testRunner.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/testRunner.html
@@ -9,22 +9,28 @@
    
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-core-1.4.0-full-compat.js"></script>
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/jsUnitCore.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsBaseUiManager.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsClassicUiManager.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsModernUiManager.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestFunction.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestGroup.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestPage.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestManager.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestRunner.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestClassRunner.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestFunctionRunner.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTraceMessage.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/JsTestFrameAnalyser.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/jsUnitParams.js"></script>
-   <script language="JavaScript" type="text/javascript" src="app/jsUnitTracer.js"></script>
-   <script language="JavaScript" type="text/javascript">
+   <script type="text/javascript" src="app/jsUnitCore.js"></script>
+   <script type="text/javascript" src="app/JsTestRunner.js"></script>
+   <script type="text/javascript" src="app/JsBaseUiManager.js"></script>
+   <script type="text/javascript" src="app/JsClassicUiManager.js"></script>
+   <script type="text/javascript" src="app/JsModernUiManager.js"></script>
+   <script type="text/javascript" src="app/JsTestCase.js"></script>
+   <script type="text/javascript" src="app/JsTestCaseResult.js"></script>
+   <script type="text/javascript" src="app/JsTestCaseTimeOutException.js"></script>
+   <script type="text/javascript" src="app/JsTestGroup.js"></script>
+   <script type="text/javascript" src="app/JsTestManager.js"></script>
+   <script type="text/javascript" src="app/JsTestMethod.js"></script>
+   <script type="text/javascript" src="app/JsTestClassRunner.js"></script>
+   <script type="text/javascript" src="app/JsTestFunction.js"></script>
+   <script type="text/javascript" src="app/JsTestFunctionRunner.js"></script>
+   <script type="text/javascript" src="app/JsTraceMessage.js"></script>
+   <script type="text/javascript" src="app/JsTestFrameAnalyser.js"></script>
+   <script type="text/javascript" src="app/JsTestPage.js"></script>
+   <script type="text/javascript" src="app/JsTestSuiteResults.js"></script>
+   <script type="text/javascript" src="app/jsUnitParams.js"></script>
+   <script type="text/javascript" src="app/jsUnitTracer.js"></script>
+   
+   <script type="text/javascript">
 
    window.addEvent('domready', function() {
       resetTestManager();
